--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
                     <input type="text" name="sobrenome" id="isobrenome">
                 </div>
                 <div>
+                    <label for="inasc">Data de nascimento:</label>
+                    <input type="date" name="nasc" id="inasc">
+                </div>
+                <div>
+                    <label for="sexo-radio">Sexo:</label>
+                    <input type="radio" name="sexo" id="sexo-radio" checked>Masculino
+                    <input type="radio" name="sexo" id="sexo-radio">Feminino
+                    <input type="radio" name="sexo" id="sexo-radio">Prefiro não informar
+                </div>
+                <div>
                     <label for="cidade-select">Cidade:</label>
                     <select name="cidade" id="cidade-select">
                         <option value="">--- Selecione o Estado ---</option>
