--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
 </head>
 <body>
     <header>
-        <h1>Formulário</h1>
+        <h1>Mini Quiz</h1>
     </header>
     <main>
-        <h2>Finalize suas compras aqui</h2>
         <form action="" method="post">
-            <fieldset>
+            <fieldset> <!-- Dados Pessoais -->
                 <legend>Dados Pessoais</legend>
                 <div>
                     <label for="inome">Nome:</label>
@@ -77,6 +76,9 @@
                         </optgroup>
                     </select>
                 </div>
+            </fieldset>
+            <fieldset> <!-- Perguntas -->
+                
             </fieldset>
         </form>
     </main>
