--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
                 <legend>Dados Pessoais</legend>
                 <div>
                     <label for="inome">Nome:</label>
-                    <input type="text" name="nome" id="inome">
+                    <input type="text" name="nome" id="inome" placeholder="Nome" required>
                 </div>
                 <div>
                     <label for="isobrenome">Sobrenome:</label>
-                    <input type="text" name="sobrenome" id="isobrenome">
+                    <input type="text" name="sobrenome" id="isobrenome" placeholder="Sobrenome" required>
                 </div>
                 <div>
                     <label for="inasc">Data de nascimento:</label>
@@ -78,12 +78,35 @@
                 </div>
             </fieldset>
             <fieldset> <!-- Perguntas -->
-                
+                <div> <!-- Pergunta 1 -->
+                    <h2>Q1: A afirmação 'O HTML é uma linguagem de programação', é:</h2>
+                    <input type="radio" name="q1" id="q1-v">Verdadeira
+                    <input type="radio" name="q1" id="q1-f">Falso
+                </div>  
+                <div>
+                    <h2>Q2: Marque as linguagens de programação:</h2>
+                    <input type="checkbox" name="q2" id="q2-checkbox">Python
+                    <input type="checkbox" name="q2" id="q2-checkbox" checked>HTML
+                    <input type="checkbox" name="q2" id="q2-checkbox">Java
+                    <input type="checkbox" name="q2" id="q2-checkbox">Kotlin
+                </div>
+                <div>
+                    <h2>Q3: Digite um email válido</h2>
+                    <input type="email" name="email" id="iemail" minlenght="12" required>
+                </div>
             </fieldset>
+            <div class="btn">
+                <input type="button" value="Enviar" onclick="enviar()">
+            </div>
         </form>
     </main>
     <footer>
         <p>Projeto Desenvolvido por <a href="https://github.com/icaro-soares" target="_blank">Ícaro Soares</a></p>
     </footer>
+    <script>
+        function enviar() {
+            alert('Dados enviados com sucesso!')
+        }
+    </script>
 </body>
 </html>
