--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Formulário</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header>
@@ -83,16 +83,25 @@
                     <input type="radio" name="q1" id="q1-v">Verdadeira
                     <input type="radio" name="q1" id="q1-f">Falso
                 </div>  
-                <div>
+                <div> <!-- Pergunta 2 -->
                     <h2>Q2: Marque as linguagens de programação:</h2>
                     <input type="checkbox" name="q2" id="q2-checkbox">Python
-                    <input type="checkbox" name="q2" id="q2-checkbox" checked>HTML
+                    <input type="checkbox" name="q2" id="q2-checkbox">HTML
                     <input type="checkbox" name="q2" id="q2-checkbox">Java
                     <input type="checkbox" name="q2" id="q2-checkbox">Kotlin
                 </div>
-                <div>
-                    <h2>Q3: Digite um email válido</h2>
-                    <input type="email" name="email" id="iemail" minlenght="12" required>
+                <div> <!-- Pergunta 3-->
+                    <h2>Q3: Digite um email válido</h2> 
+                    <input type="email" name="email" id="iemail" required>
+                </div>
+                <div> <!-- Pergunta 4-->
+                    <h2>Q4: A que linguagem de programação se refere esta imagem?</h2> 
+                    <img src="imagens/java-pq.png" alt="">
+                    <input type="text" name="q4-text" id="q4-text" placeholder="Sua resposta aqui...">
+                </div>
+                <div> <!-- Pergunta 5 -->
+                    <h2>Q5: O que significa a sigla HTML e CSS respectivamente: <input type="text" name="q5-text" id="q5-text" placeholder="Resposta..."></h2>
+                    
                 </div>
             </fieldset>
             <div class="btn">
